Some builds and Linux scripts improvements