@@ -4,11 +4,14 @@
 #  0 normal shutdown
 #  2 reboot attempt
 
-while :; do
-	[ -f log/java0.log.0 ] && mv log/java0.log.0 "log/`date +%Y-%m-%d_%H-%M-%S`_java.log"
-	[ -f log/stdout.log ] && mv log/stdout.log "log/`date +%Y-%m-%d_%H-%M-%S`_stdout.log"
-java -Xms512m -Xmx512m -cp ./libs/*:l2open.jar interlude.gameserver.GameServer > log/stdout.log 2>&1
-	[ $? -ne 2 ] && break
-#	/etc/init.d/mysql restart
-	sleep 10
+err=1
+until [ $err == 0 ];
+do
+        #mysqlcheck -h $DBHOST -u $USER --password=$PASS -s -r $DBNAME>>"log/`date +%Y-%m-%d_%H:%M:%S`-sql_check.log"
+        #mysqldump -h $DBHOST -u $USER --password=$PASS $DBNAME|zip "backup/`date +%Y-%m-%d_%H:%M:%S`-l2jdb_gameserver.zip" -
+        [ -f log/java0.log.0 ] && mv log/java0.log.0 "log/`date +%Y-%m-%d_%H-%M-%S`_java.log"
+        [ -f log/stdout.log ] &&  mv log/stdout.log "log/`date +%Y-%m-%d_%H-%M-%S`_stdout.log"
+        [ -f log/chat.log ] && mv log/chat.log "log/`date +%Y-%m-%d_%H:%M:%S`_chat.log"
+        java -Dfile.encoding=UTF-8 -Xms512m -Xmx2048m -XX:+UseParallelGC -XX:+AggressiveOpts -cp ./libs/*:l2open-game.jar interlude.gameserver.GameServer > log/stdout.log 2>&1
+        sleep 10;
 done
